--- a/Autolayout/Base.lproj/Main.storyboard
+++ b/Autolayout/Base.lproj/Main.storyboard
@@ -83,6 +83,56 @@
             </objects>
             <point key="canvasLocation" x="-59.420289855072468" y="845.75892857142856"/>
         </scene>
+        <!--Autolayout 5-->
+        <scene sceneID="OQ2-3v-b8T">
+            <objects>
+                <viewController storyboardIdentifier="Autolayout 5" id="GFQ-Mh-OiI" userLabel="Autolayout 5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mWz-aE-5Hz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N2k-J3-klW" userLabel="Teal View">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9QE-rd-aKV" userLabel="Teal View">
+                                <rect key="frame" x="0.0" y="448" width="414" height="448"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="N2k-J3-klW" firstAttribute="top" secondItem="mWz-aE-5Hz" secondAttribute="top" id="5np-T1-N7g"/>
+                            <constraint firstItem="9QE-rd-aKV" firstAttribute="leading" secondItem="1jq-Sj-1CO" secondAttribute="leading" id="JJY-Jx-tT8"/>
+                            <constraint firstItem="N2k-J3-klW" firstAttribute="leading" secondItem="1jq-Sj-1CO" secondAttribute="leading" id="PKp-SB-goV"/>
+                            <constraint firstItem="N2k-J3-klW" firstAttribute="trailing" secondItem="1jq-Sj-1CO" secondAttribute="trailing" id="Uk6-MP-fwB"/>
+                            <constraint firstItem="N2k-J3-klW" firstAttribute="height" secondItem="mWz-aE-5Hz" secondAttribute="height" multiplier="0.5" id="oJs-k4-RiM"/>
+                            <constraint firstAttribute="bottom" secondItem="9QE-rd-aKV" secondAttribute="bottom" id="tlD-D4-Epw"/>
+                            <constraint firstItem="9QE-rd-aKV" firstAttribute="trailing" secondItem="1jq-Sj-1CO" secondAttribute="trailing" id="urI-ZB-pM0"/>
+                            <constraint firstItem="9QE-rd-aKV" firstAttribute="top" secondItem="N2k-J3-klW" secondAttribute="bottom" id="y2e-ja-4y8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1jq-Sj-1CO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QSL-dh-gjg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="773.91304347826087" y="845.75892857142856"/>
+        </scene>
+        <!--Autolayout 6-->
+        <scene sceneID="Wdl-fb-t8l">
+            <objects>
+                <viewController storyboardIdentifier="Autolayout 6" id="si8-Uq-qnY" userLabel="Autolayout 6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ELi-1a-D8P">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="KTK-cz-f4y"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Koc-aU-0fG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1619" y="846"/>
+        </scene>
         <!--Autolayout 2-->
         <scene sceneID="8Qn-wV-2tw">
             <objects>
